apps/base/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
