apps/base/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  parentRefs:
    - name: sandbox-gateway
      namespace: nginx-gateway
  hostnames:
    - homepage.miskers.org
  rules:
    - backendRefs:
        - name: homepage-svc
          port: 3000
